--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -126,6 +126,9 @@
 				<a th:href="@{/incidencia/listar}	" class="nav-link">
                     <i class="bi bi-exclamation-triangle me-2"></i>Incidencia
                  </a>	
+                 <a class="nav-link" th:href="@{/admin/evaluaciones/listar}">
+				    <i class="bi bi-briefcase me-2"></i>Evaluaciones
+				</a>
             </div>
             
             <!-- Tutor Prácticas Menu -->
