--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -79,7 +79,7 @@
                             <small><strong>Admin de prueba:</strong><br>
                             Email: admin@controlpracticas.com<br>
                             Password: admin123</small><br>
-                            <small><strong>Alumno de prueba:</strong><br>
+                        <!--  <small><strong>Alumno de prueba:</strong><br>
                             Email: alumno@controlpracticas.com<br>
                             Password: alumno123</small>   <br>
                              <small><strong>Tutor de prueba:</strong><br>
@@ -87,7 +87,7 @@
                             Password: tutor123</small> <br>
                              <small><strong>Tutor de Practicas de prueba:</strong><br>
                             Email: practicas@controlpracticas.com<br>
-                            Password: practicas123</small> 
+                            Password: practicas123</small>  -->
                         </div>
                     </div>
                 </div>
