--- a/src/main/resources/templates/admin/evaluacion/listar.html
+++ b/src/main/resources/templates/admin/evaluacion/listar.html
@@ -5,9 +5,13 @@
             <div class="card-header bg-primary text-white d-flex justify-content-between align-items-center">
                 <h3 class="mb-0" th:text="${titulo}">Listado de Evaluaciones</h3>
                 <div th:if="${!#lists.contains(#authentication.authorities.![authority], 'ALUMNO')}">
+                <div class="mb-0">
                 <a th:href="@{/admin/evaluaciones/nueva}" class="btn btn-light">
                     <i class="bi bi-plus-circle"></i> Nueva Evaluación
                 </a>
+                </div>
+                <div th:if="${!#lists.contains(#authentication.authorities.![authority], 'TUTOR_PRACTICAS')
+                			AND !#lists.contains(#authentication.authorities.![authority], 'TUTOR_CURSO')}">
                 <a th:href="@{/admin/evaluacion/capacidades}" class="btn btn-success me-2">
 			            <i class="bi bi-award"></i> Capacidades
 				</a>
@@ -15,6 +19,7 @@
 			            <i class="bi bi-list-check"></i> Criterios
 				</a>
 				</div>
+			</div>
 				
 				
             </div>
@@ -67,16 +72,21 @@
                                 <td th:text="${#temporals.format(evaluacion.fecha, 'dd/MM/yyyy')}">01/11/2024</td>
                                 <td th:if="${!#lists.contains(#authentication.authorities.![authority], 'ALUMNO')}">
                                     <div class="btn-group" role="group">
-                                        <a th:href="@{/admin/evaluaciones/editar/{id}(id=${evaluacion.id})}" 
+                                      <div>
+                                       <a th:href="@{/admin/evaluaciones/editar/{id}(id=${evaluacion.id})}" 
                                            class="btn btn-sm btn-warning" title="Editar">
                                             <i class="bi bi-pencil"></i>
                                         </a>
+                                      
+                                      </div>
+                                       <div th:if="${!#lists.contains(#authentication.authorities.![authority], 'TUTOR_PRACTICAS')}">
                                         <a th:href="@{/admin/evaluaciones/eliminar/{id}(id=${evaluacion.id})}" 
                                            class="btn btn-sm btn-danger"
                                            onclick="return confirm('¿Está seguro de eliminar esta evaluación?')"
                                            title="Eliminar">
                                             <i class="bi bi-trash"></i>
                                         </a>
+                                        </div>
                                     </div>
                                 </td>
                             </tr>
