--- a/src/main/resources/templates/admin/evaluacion/listar.html
+++ b/src/main/resources/templates/admin/evaluacion/listar.html
@@ -3,26 +3,22 @@
     <div class="container mt-5">
         <div class="card">
             <div class="card-header bg-primary text-white d-flex justify-content-between align-items-center">
-                <h3 class="mb-0" th:text="${titulo}">Listado de Evaluaciones</h3>
-                <div th:if="${!#lists.contains(#authentication.authorities.![authority], 'ALUMNO')}">
-                <div class="mb-0">
-                <a th:href="@{/admin/evaluaciones/nueva}" class="btn btn-light">
-                    <i class="bi bi-plus-circle"></i> Nueva Evaluación
-                </a>
-                </div>
-                <div th:if="${!#lists.contains(#authentication.authorities.![authority], 'TUTOR_PRACTICAS')
-                			AND !#lists.contains(#authentication.authorities.![authority], 'TUTOR_CURSO')}">
-                <a th:href="@{/admin/evaluacion/capacidades}" class="btn btn-success me-2">
-			            <i class="bi bi-award"></i> Capacidades
-				</a>
-				<a th:href="@{/admin/evaluacion/criterios}" class="btn btn-info me-2">
-			            <i class="bi bi-list-check"></i> Criterios
-				</a>
-				</div>
-			</div>
-				
-				
-            </div>
+    <h3 class="mb-0" th:text="${titulo}">Listado de Evaluaciones</h3>
+    <div class="d-flex gap-2" th:if="${!#lists.contains(#authentication.authorities.![authority], 'ALUMNO')}">
+        <a th:href="@{/admin/evaluaciones/nueva}" class="btn btn-light">
+            <i class="bi bi-plus-circle"></i> Nueva Evaluación
+        </a>
+        <th:block th:if="${!#lists.contains(#authentication.authorities.![authority], 'TUTOR_PRACTICAS')
+                AND !#lists.contains(#authentication.authorities.![authority], 'TUTOR_CURSO')}">
+            <a th:href="@{/admin/evaluacion/capacidades}" class="btn btn-success">
+                <i class="bi bi-award"></i> Capacidades
+            </a>
+            <a th:href="@{/admin/evaluacion/criterios}" class="btn btn-info">
+                <i class="bi bi-list-check"></i> Criterios
+            </a>
+        </th:block>
+    </div>
+</div>
             <div class="card-body">
                 <!-- Mensajes de feedback -->
                 <div th:if="${success}" class="alert alert-success alert-dismissible fade show" role="alert">
